--- a/documentation/css/template.css
+++ b/documentation/css/template.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 @import url('phpdocumentor-clean-icons/style.css');
 
 body {
@@ -343,6 +343,12 @@ body .modal {
     margin-right:auto;
 }
 
+.side-nav.nav-list li a {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 @media (min-width: 767px) {
     .sidebar {
         position:         fixed;
@@ -399,14 +405,19 @@ body .modal {
         background-color: white;
     }
 
-    .footer-sections h1 {
+    .footer-sections .span4 h1 {
         color: #ccccd9;
+        margin-top: 0;
     }
 
     .detailsbar {
         background-color: white;
         color: #333;
         border: none;
+    }
+
+    .row-fluid .span2 {
+        width: 100%;
     }
 }
 
